<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">topjobs</string>
    <string name="about">About</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="reload">Reload</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="job_categories">Job Categories</string>
    <string name="vacancy_advertisement">Vacancy Advertisement</string>
    <string name="position">Position:</string>
    <string name="employer">Employer:</string>
    <string name="job_ref">Job Ref:</string>
    <string name="closing_date">Closing Date:</string>
    <string name="job_description">Job Description</string>
    <string name="see_full_advertisement">See full advertisement</string>
    <string name="remove_all">Remove all</string>
    <string name="favorites_delete_confirmation">Do you want to remove this job from your favorites list?</string>
    <string name="favorites_delete_all_confirmation">Do you want to remove all jobs from your favorites list?</string>
    <string name="topjobs_url">http://www.topjobs.lk</string>
    <string name="successfully_removed">Successfully Removed</string>
    <string name="all_jobs_successfully_removed">All Jobs Successfully Removed</string>
    <string name="unable_to_remove_all_jobs">Unable To Remove All Jobs</string>
    <string name="unable_to_remove_this_job">Unable To Remove This Job</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unable_to_open_link">Unable To Open Link</string>
    <string name="unable_to_open_favorite_jobs">Unable To Open Favorite Jobs</string>
    <string name="unable_to_open_this_job">Unable To Open This Job</string>
    <string name="unable_to_share">Unable To Share This Job</string>
    <string name="check_out_this_job">Check out this job</string>
    <string name="download_error_msg">Unable to download data. Please check network connection</string>
    <string name="last_update">Last update:</string>
    <string name="job_postings">job postings</string>
    <string name="location">Location</string>

</resources>