<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!--  * 20190516 PS SDB-954-4701 Add GPS logo in the menu bar -->
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_location"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/location"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/favorites"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>