<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_back_color" >

    <RelativeLayout
        android:id="@+id/layoutFooter"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_footer_height"
        android:layout_alignParentBottom="true"
        android:background="@color/default_red" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_left_padding"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageViewPreviousButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:onClick="onClick"
                    android:src="@drawable/job_details_previous_selector" />

                <ImageView
                    android:id="@+id/imageViewPreviousButtonInactive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/btn_previous_pressed"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageViewNextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:onClick="onClick"
                    android:src="@drawable/job_details_next_selector" />

                <ImageView
                    android:id="@+id/imageViewNextButtonInactive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/btn_next_pressed"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewFooterLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:onClick="onClick"
            android:src="@drawable/footer_logo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layoutFooter" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_left_padding"
            android:paddingRight="@dimen/default_right_padding"
            android:paddingTop="@dimen/default_left_padding" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageViewFavoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:onClick="onClick"
                    android:src="@drawable/btn_favorite_off" />

                <TextView
                    android:id="@+id/textViewPositionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/imageViewFavoriteButton"
                    android:text="@string/position"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textViewPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewPositionTitle"
                    android:layout_toLeftOf="@id/imageViewFavoriteButton"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/job_details_verticle_gap"
                android:text="@string/employer"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewEmployer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/default_red" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/job_details_verticle_gap"
                android:text="@string/job_ref"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewJobRef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/buttonOpenLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:onClick="onClick"
                android:text="@string/see_full_advertisement" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/job_details_verticle_gap"
                android:text="@string/closing_date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewClosingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/job_details_verticle_gap"
                android:text="@string/job_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/textViewJobDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>